fix: move refresh button to left side to prevent overlap

--- a/css/style.css
+++ b/css/style.css
@@ -1054,7 +1054,7 @@ button {
 .refresh-btn {
     position: absolute;
     top: 25px;
-    right: 25px;
+    left: 25px;
     width: 44px;
     height: 44px;
     background: rgba(255, 255, 255, 0.1);
